EXT-esp32_wroom_32e/build/log/idf_py_stdout_output_36337
Command: ninja flash
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/luis/Documentos/IOT/Proyecto_IoT_Luis_Alejandro/EXT-esp32_wroom_32e/build/bootloader/esp-idf/esptool_py && /home/luis/.espressif/python_env/idf5.5_py3.12_env/bin/python /home/luis/Documentos/Instaladores/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/luis/Documentos/IOT/Proyecto_IoT_Luis_Alejandro/EXT-esp32_wroom_32e/build/bootloader/bootloader.bin
Bootloader binary size 0x66c0 bytes. 0x940 bytes (8%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj 
/home/luis/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20251107/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.2\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/luis/Documentos/IOT/Proyecto_IoT_Luis_Alejandro/EXT-esp32_wroom_32e/build/config -I/home/luis/Documentos/IOT/Proyecto_IoT_Luis_Alejandro/EXT-esp32_wroom_32e/main -I/home/luis/Documentos/Instaladores/esp-idf/components/newlib/platform_include -I/home/luis/Documentos/Instaladores/esp-idf/components/freertos/config/include -I/home/luis/Documentos/Instaladores/esp-idf/components/freertos/config/include/freertos -I/home/luis/Documentos/Instaladores/esp-idf/components/freertos/config/xtensa/include -I/home/luis/Documentos/Instaladores/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/luis/Documentos/Instaladores/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/luis/Documentos/Instaladores/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/luis/Documentos/Instaladores/esp-idf/components/freertos/esp_additions/include -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_hw_support/include -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_hw_support/include/soc -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_hw_support/dma/include -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_hw_support/ldo/include -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_hw_support/debug_probe/include -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_hw_support/power_supply/include -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_hw_support/port/esp32/. -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_hw_support/port/esp32/include -I/home/luis/Documentos/Instaladores/esp-idf/components/heap/include -I/home/luis/Documentos/Instaladores/esp-idf/components/heap/tlsf -I/home/luis/Documentos/Instaladores/esp-idf/components/log/include -I/home/luis/Documentos/Instaladores/esp-idf/components/soc/include -I/home/luis/Documentos/Instaladores/esp-idf/components/soc/esp32 -I/home/luis/Documentos/Instaladores/esp-idf/components/soc/esp32/include -I/home/luis/Documentos/Instaladores/esp-idf/components/soc/esp32/register -I/home/luis/Documentos/Instaladores/esp-idf/components/hal/platform_port/include -I/home/luis/Documentos/Instaladores/esp-idf/components/hal/esp32/include -I/home/luis/Documentos/Instaladores/esp-idf/components/hal/include -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_rom/include -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_rom/esp32/include -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_rom/esp32 -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_common/include -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_system/include -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_system/port/soc -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_system/port/include/private -I/home/luis/Documentos/Instaladores/esp-idf/components/xtensa/esp32/include -I/home/luis/Documentos/Instaladores/esp-idf/components/xtensa/include -I/home/luis/Documentos/Instaladores/esp-idf/components/xtensa/deprecated_include -I/home/luis/Documentos/Instaladores/esp-idf/components/lwip/include -I/home/luis/Documentos/Instaladores/esp-idf/components/lwip/include/apps -I/home/luis/Documentos/Instaladores/esp-idf/components/lwip/include/apps/sntp -I/home/luis/Documentos/Instaladores/esp-idf/components/lwip/lwip/src/include -I/home/luis/Documentos/Instaladores/esp-idf/components/lwip/port/include -I/home/luis/Documentos/Instaladores/esp-idf/components/lwip/port/freertos/include -I/home/luis/Documentos/Instaladores/esp-idf/components/lwip/port/esp32xx/include -I/home/luis/Documentos/Instaladores/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/luis/Documentos/Instaladores/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/luis/Documentos/Instaladores/esp-idf/components/mqtt/esp-mqtt/include -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_event/include -I/home/luis/Documentos/Instaladores/esp-idf/components/tcp_transport/include -I/home/luis/Documentos/Instaladores/esp-idf/components/esp-tls -I/home/luis/Documentos/Instaladores/esp-idf/components/esp-tls/esp-tls-crypto -I/home/luis/Documentos/Instaladores/esp-idf/components/mbedtls/port/include -I/home/luis/Documentos/Instaladores/esp-idf/components/mbedtls/mbedtls/include -I/home/luis/Documentos/Instaladores/esp-idf/components/mbedtls/mbedtls/library -I/home/luis/Documentos/Instaladores/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/luis/Documentos/Instaladores/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/luis/Documentos/Instaladores/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/luis/Documentos/Instaladores/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_timer/include -I/home/luis/Documentos/Instaladores/esp-idf/components/nvs_flash/include -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_partition/include -I/home/luis/Documentos/Instaladores/esp-idf/components/esp_netif/include -I/home/luis/Documentos/Instaladores/esp-idf/examples/common_components/protocol_examples_common/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/luis/Documentos/IOT/Proyecto_IoT_Luis_Alejandro/EXT-esp32_wroom_32e=. -fmacro-prefix-map=/home/luis/Documentos/Instaladores/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj -c /home/luis/Documentos/IOT/Proyecto_IoT_Luis_Alejandro/EXT-esp32_wroom_32e/main/app_main.c
/home/luis/Documentos/IOT/Proyecto_IoT_Luis_Alejandro/EXT-esp32_wroom_32e/main/app_main.c: In function 'app_main':
/home/luis/Documentos/IOT/Proyecto_IoT_Luis_Alejandro/EXT-esp32_wroom_32e/main/app_main.c:104:74: error: expected ';' before 'int'
  104 |         snprintf(payload, sizeof(payload), "{\"data\": %d}", temperatura)
      |                                                                          ^
      |                                                                          ;
......
  107 |         int msg_id = esp_mqtt_client_publish(client, topic, payload, 0, 0, 0);
      |         ~~~                                                               
/home/luis/Documentos/IOT/Proyecto_IoT_Luis_Alejandro/EXT-esp32_wroom_32e/main/app_main.c:109:12: error: 'msg_id' undeclared (first use in this function)
  109 |         if(msg_id != -1){
      |            ^~~~~~
/home/luis/Documentos/IOT/Proyecto_IoT_Luis_Alejandro/EXT-esp32_wroom_32e/main/app_main.c:109:12: note: each undeclared identifier is reported only once for each function it appears in
/home/luis/Documentos/IOT/Proyecto_IoT_Luis_Alejandro/EXT-esp32_wroom_32e/main/app_main.c:90:30: warning: unused variable 'client' [-Wunused-variable]
   90 |     esp_mqtt_client_handle_t client = mqtt_app_start();
      |                              ^~~~~~
ninja: build stopped: subcommand failed.
